# enterprise-blinky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
boards/: stm32g474_core.overlay
src/: main.c  main.cpp
